cmake_minimum_required(VERSION 2.8.8 FATAL_ERROR)

if(BLEEP_DEBUG STREQUAL ON)
  message(STATUS "Debug enabled.")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
else(BLEEP_DEBUG STREQUAL ON)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif(BLEEP_DEBUG STREQUAL ON)
add_subdirectory(lib/googletest)
if(UNITTEST_OPT STREQUAL ON)
  message("--------------------------------------------------------------------------------------")
  message("                            Start Unit tests")
  message("--------------------------------------------------------------------------------------")
  add_subdirectory(unittest)
elseif(TEST_OPT STREQUAL ON)
  message("--------------------------------------------------------------------------------------")
  message("                            Start regression tests")
  message("--------------------------------------------------------------------------------------")
  add_subdirectory(regtest)

endif()

